# chat-stat

./: .dockerignore  .gitignore  .test2  README.md  REDIS.md  channels.txt  dockerfile  dockerfile.api  dockerfile.frontend  dockerfile.server  env.list  go.mod  go.sum  justfile  login.sh  main.go  scratchpad.md
.github/workflows/: deploy.yml  dev-deploy.yml  prod-deploy.yml
assets/: file.txt
cmd/app/: main.go
infra/: common.hcl
infra/modules/aws/: terragrunt.hcl
infra/modules/aws/dynamodb/: _outputs.tf  dynamodb.tf
infra/modules/aws/ecr/: _locals.tf  _outputs.tf  ecr.tf  lifecycle.tf  main.tf  outputs.tf  terragrunt.hcl
infra/modules/aws/ecs/: _inputs.tf  _outputs.tf  _variables.tf  cluster.tf  data.tf  main.tf  service.tf  task.tf  terragrunt.hcl  variables.tf
infra/modules/aws/eks/: _data.tf  _inputs.tf  eks.tf  terragrunt.hcl
infra/modules/aws/elasticache/: cloudwatch.tf  elasticache.tf  main.tf  terragrunt.hcl  variables.tf
infra/modules/aws/eventbridge/: _data.tf  _inputs.tf  _variables.tf  bus.tf  rules.tf  targets.tf  terragrunt.hcl
infra/modules/aws/kms/: .terraform.lock.hcl  _outputs.tf  kms.tf  outputs.tf
infra/modules/aws/lambda/: .terraform.lock.hcl  _data.tf  _inputs.tf  _locals.tf  _outputs.tf  _variables.tf  cloudwatch.tf  event.tf  lambda.tf  main.tf  terragrunt.hcl  urls.tf  variables.tf
infra/modules/aws/s3/: _outputs.tf  s3.tf
infra/modules/aws/secrets/: _data.tf  _inputs.tf  _outputs.tf  _variables.tf  data.tf  main.tf  secrets.tf  terragrunt.hcl  variables.tf
infra/modules/aws/sfn/: _inputs.tf  _outputs.tf  sfn.tf  terragrunt.hcl
infra/modules/aws/timestream/: _imports.tf  timestream.tf
infra/modules/aws/vpc/: _variables.tf  gateway.tf  load_balancer.tf  main.tf  outputs.tf  security.tf  subnets.tf  terragrunt.hcl  variables.tf  vpc.tf
infra/us-east-1/dev/: account.hcl  backend.tf  common.tf  provider.tf  terragrunt.hcl
infra/us-east-1/dev/.terraform/: terraform.tfstate
infra/us-east-1/dev/ecr/: .terraform.lock.hcl  terragrunt.hcl
infra/us-east-1/dev/ecs/: terragrunt.hcl
infra/us-east-1/dev/elasticache/: .terraform.lock.hcl  terragrunt.hcl
infra/us-east-1/dev/eventbridge/: .terraform.lock.hcl
infra/us-east-1/prod/: account.hcl  environment.hcl  terragrunt.hcl
internal/emotes/: bttv.go  emotes.go  ffz.go  stv.go
k8s/: chat-stat.yml  deployment.yml  redis.yml  test.yml
scripts/: success.sh
src/api/: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js
src/api/assets/: main.css
src/api/src/: main.rs
src/api/templates/components/: chart.html  todo-form.html  todo-list.html  update-chart.html
src/api/templates/layouts/: base.html
src/api/templates/pages/: dashboard.html  hello.html  todos.html
src/cmd/app/: main.go
src/cmd/lambda/hello/: main.go
src/cmd/timestream/: insert.go  insert_record.sh  main.go
src/frontend/: package-lock.json  package.json  tailwind.config.js
src/internal/bot/: bot.go
src/internal/db/: db.go
src/internal/emotes/: 7tv.go  bttv.go  ffz.go  stv.go
src/internal/eventsub/: handlers.go  main.go
src/internal/timeseries/: timeseries.go
src/lambdas/eventsub/: Cargo.toml
src/lambdas/timestreamquery/: Cargo.toml
src/lambdas/timestreamquery/examples/: request.json  top_moments_cross_channel.json  unload_top_moments_by_channel.json  unload_top_moments_cross_channel.json
src/lambdas/timestreamquery/src/: main.rs
src/lambdas/twitcheventsub/: Cargo.toml
src/lambdas/twitcheventsub/examples/: dynamodb-insert-bad-stream-id-event.json  dynamodb-insert-event.json  dynamodb-insert-partial-event.json  dynamodb-modify-event.json  dynamodb-remove-event.json
src/lambdas/twitcheventsub/src/: main.rs
src/lambdas/twitcheventsubwebhook/: Cargo.toml
src/lambdas/twitcheventsubwebhook/examples/: offline.json  revoke.json  subscribe.json  twitch-event-stream-offline.json  twitch-event-stream-online.json  twitch-event-verify-online.json
src/lambdas/twitcheventsubwebhook/scripts/: README.md  auth.sh  delete-subscription.sh  list-subscriptions.sh  subscribe.sh
src/lambdas/twitcheventsubwebhook/src/: main.rs
src/lambdas/twitchrecordmanager/: Cargo.toml
src/lambdas/webhookcallback/: Cargo.toml
src/rust-lambda/: Cargo.toml  payload.json
src/rust-lambda-2/: Cargo.toml
src/rust-lambda-2/examples/: dynamodb-insert-event.json  dynamodb-remove-event.json
src/rust-lambda-2/src/: main.rs
src/rust-lambda/src/: main.rs
(+49 files in other folders)
