[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.3", features = ["behavior-version-latest"] }
aws-sdk-timestreamquery = "1.11.0"
axum = "0.7.4"
color-eyre = "0.6.2"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
