[package]
name = "timestream-query"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.82"
aws-config = "1.2.0"
aws-sdk-timestreamquery = "1.20.0"

lambda_runtime = "0.11.1"
serde = "1"
strum = { version = "0.26.2", features = ["strum_macros"] }
strum_macros = "0.26.2"
tokio = { version = "1", features = ["macros"] }
