[package]
name = "twitch-event-sub"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-sdk-dynamodb = "1.9.0"
aws_lambda_events = { version = "0.12.0", default-features = false, features = [
    "dynamodb",
] }

lambda_runtime = "0.8.3"
reqwest = { version = "0.11.23", features = ["rustls-tls"] }
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
twitch_api = { version = "0.7.0-rc.7", features = [
    "eventsub",
    "helix",
    "client",
    "reqwest",
    "twitch_oauth2",
] }
