[package]
name = "twitch-event-sub-webhook"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
aws-sdk-sfn = "1.10.0"
chrono = "0.4.31"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
reqwest = { version = "0.11.23", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
twitch_api = { version = "0.7.0-rc.7", features = ["eventsub", "hmac", "helix", "twitch_oauth2", "client", "reqwest"] }
twitch_types = { version = "0.4.4", features = ["time"] }
